--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB</title>
-		<meta charset='utf-8'>	
-	</head>
-	<body style='margin:0; padding:0'>
-		<header style='background-color:#FF0000; height:70px; width:100%'>
-		</header>
-		<footer style='background-color:#00FF00; height:60px; width:100%; position:fixed; bottom:0px'>
-			<div style='position:absolute; top:50%; left:50%; transform:translate(-50%, -50%)'>Best School</div>
-		</footer>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="margin:0;padding:0;">
+    <header style="background-color:#FF0000;height:70px;width:100%;"></header>
+    <footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;bottom:0;position:fixed;display:flex;align-items:center;justify-content:center;">
+        <p style="margin:0;">Best School</p>
+    </footer>
+</body>
 </html>
