--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB</title>
-		<meta charset="utf-8">
-		<style>
-			body {
-				margin: 0px;
-				padding: 0px;
-			}
-			header {
-				background-color: #FF0000;
-				height: 70px;
-				width: 100%;
-			}
-			footer {
-				background-color: #00FF00;
-				height: 60px;
-				width: 100%;
-				position: fixed;
-				bottom: 0px;
-			}
-			.centered_footer {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-			}
-		</style>
-	</head>
-	<body>
-		<header>
-		</header>
-		<footer>
-			<div class="centered_footer">Best School</div>
-		</footer>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #FF0000;
+            height: 70px;
+            width: 100%;
+        }
+        footer {
+            background-color: #00FF00;
+            height: 60px;
+            width: 100%;
+            position: fixed;
+            text-align: center;
+            margin: auto;
+            bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        footer p {
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+    <header></header>
+    <footer>
+        <p>Best School</p>
+    </footer>
+</body>
 </html>
