--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB</title>
-		<meta charset='utf-8'>
-		<link rel="stylesheet" type="text/css" href="styles/2-common.css">
-		<link rel="stylesheet" type="text/css" href="styles/2-header.css">
-		<link rel="stylesheet" type="text/css" href="styles/2-footer.css">
-	</head>
-	<body>
-		<header>
-		</header>
-		<footer>
-			<div class="centered_footer">Best School</div>
-		</footer>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
+    <title>Document</title>
+</head>
+<body>
+    <header></header>
+    <footer>
+        <p>Best School</p>
+    </footer>
+</body>
 </html>
