--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB</title>
-		<meta charset='utf-8'>
-		<link rel="icon" type="image/png" href="images/icon.png">
-		<link rel="stylesheet" type="text/css" href="styles/3-common.css">
-		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-			</div>
-		</header>
-		<footer>
-			<div class="centered_footer">Best School</div>
-		</footer>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <title>Document</title>
+    <link rel="icon" href="images/icon.png" type="image/png">
+</head>
+<body>
+    <header></header>
+    <footer>
+        <p>Best School</p>
+    </footer>
+</body>
 </html>
