--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB</title>
-		<meta charset='utf-8'>
-		<link rel="icon" type="image/png" href="images/icon.png">
-		<link rel="stylesheet" type="text/css" href="styles/5-filters.css">
-		<link rel="stylesheet" type="text/css" href="styles/4-common.css">
-		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-			</div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<div class="locations">
-					<h3>States</h3>
-					<h4>Amazonas, Antioquia...</h4>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Cocina, Internet...</h4>
-				</div>
-				<button class="search_button">
-					Search
-				</button>
-			</section>
-		</div>
-		<footer>
-			<div class="centered_footer">Best School</div>
-		</footer>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/5-filters.css">
+    <title>Document</title>
+    <link rel="icon" href="images/icon.png" type="image/png">
+</head>
+<body>
+    <header></header>
+    <div class="container">
+        <section class="filters">
+            <div class="locations">
+                <h3>States</h3>
+                <h4>Carlifonia, Arizona...</h4>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internte, Kitchen...</h4>
+            </div>
+            <button>Search</button>
+        </section> 
+    </div>
+    <footer>
+        <p>Best School</p>
+    </footer>
+</body>
 </html>
