--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,111 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>AirBnB</title>
-		<meta charset='utf-8'>
-		<link rel="icon" type="image/png" href="images/icon.png">
-		<link rel="stylesheet" type="text/css" href="styles/6-filters.css">
-		<link rel="stylesheet" type="text/css" href="styles/4-common.css">
-		<link rel="stylesheet" type="text/css" href="styles/3-header.css">
-		<link rel="stylesheet" type="text/css" href="styles/3-footer.css">
-		<link rel="stylesheet" type="text/css" href="styles/8-places.css">
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-			</div>
-		</header>
-		<div class="container">
-			<section class="filters">
-				<div class="locations">
-					<h3>States</h3>
-					<h4>Amazonas, Antioquia...</h4>
-					<div class="popover">
-						<ul>
-							<li><h2>Amazonas</h2>
-								<ul>
-									<li>Leticia</li>
-									<li>Puerto Nariño</li>
-									<li>Tarapacá</li>
-								</ul>
-							</li>
-							<li><h2>Antioquia</h2>
-								<ul>
-									<li>Bello</li>
-									<li>Medellín</li>
-									<li>San Carlos</li>
-								</ul>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="amenities">
-					<h3>Amenities</h3>
-					<h4>Cocina, Internet...</h4>
-					<div class="popover">
-						<ul>
-							<li>Cocina</li>
-							<li>Internet</li>
-							<li>TV</li>
-							<li>Plancha</li>
-						</ul>
-					</div>
-				</div>
-				<button class="search_button">
-					Search
-				</button>
-			</section>
-			<section class="places">
-				<h1>Places</h1>
-				<div class="articles">
-					<article>
-						<h2>My home</h2>
-						<div class="price_by_night"><p>$80</p></div>
-						<div class="information">
-							<div class="max_guest"><span>2 Guests</span></div>
-							<div class="number_rooms"><span>1 Bedroom</span></div>
-							<div class="number_bathrooms"><span>1 Bathroom</span></div>
-						</div>
-						<div class="user">
-							<b>Owner:</b> Robinson Montes
-						</div>
-						<div class="description">Welcome to my spectacular light filled room with attached private bathroom and shower. You'll enjoy views of the Bello metropolitan Area as well as luxury amenities. The home sits in a safe and high-end neighborhood near beautiful recreational areas, hiking trails, shopping malls, restaurants, and universities. Fast and easy drive all around the metropolitan area.
-						</div>
-					</article>
-					<article>
-						<h2>Tiny house</h2>
-						<div class="price_by_night"><p>$65</p></div>
-						<div class="information">
-							<div class="max_guest"><span>4 Guests</span></div>
-							<div class="number_rooms"><span>2 Bedrooms</span></div>
-							<div class="number_bathrooms"><span>1 Bathroom</span></div>
-						</div>
-						<div class="user">
-							<b>Owner:</b> Katthy Perez
-						</div>
-						<div class="description">Located right in the heart of Medellin, this spacious, lofty apartment is surrounded by an abundance of shops, cafes and restaurants; including 'The Blue Light, our house restaurant downstairs! Flooded with natural light this bedroom has a queen size bed and a shared kitchen and two full bathrooms. Fresh linens with down pillows and comforter make this the perfect place to stay.
-						</div>
-					</article>
-					<article>
-						<h2>A suite</h2>
-						<div class="price_by_night"><p>$120</p></div>
-						<div class="information">
-							<div class="max_guest"><span>5 Guests</span></div>
-							<div class="number_rooms"><span>2 Bedrooms</span></div>
-							<div class="number_bathrooms"><span>2 Bathrooms</span></div>
-						</div>
-						<div class="user">
-							<b>Owner:</b> Ginebra Ceballos
-						</div>
-						<div class="description">Japanese Tatami great energy room in a peaceful, safe home in an exclusive area in the city. Impeccably clean and filled with plants. Extraordinary sunsets (15' ride from the airport and 30 minutes away from everywhere).700 meters to subway, few blocks to bus stops
-						Breakfast daily.
-						</div>
-					</article>
-				</div>
-			</section>
-		</div>
-		<footer>
-			<div class="centered_footer">Holberton School</div>
-		</footer>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/4-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
+    <link rel="stylesheet" href="styles/6-filters.css">
+    <link rel="stylesheet" href="styles/8-places.css">
+    <title>Document</title>
+    <link rel="icon" href="images/icon.png" type="image/png">
+</head>
+<body>
+    <header></header>
+    <div class="container">
+        <section class="filters">
+            <div class="locations">
+                <h3>States</h3>
+                <h4>Carlifonia, Arizona...</h4>
+                <ul class="popover">
+                   <li><h2>Arizona</h2></li>
+                    <li>Page1</li>
+                    <li>Page2</li>
+                    <li><h2>California</h2></li>
+                    <li>Page1</li>
+                    <li>Page2</li>
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <h4>Internte, Kitchen...</h4>
+                <ul class="popover">
+                    <li>Internet</li>
+                    <li>Kitchen</li>
+                    <li>TV</li>
+                    <li>Iron</li>
+                </ul>
+            </div>
+            <button>Search</button>
+        </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article>
+                <h2>My home</h2>
+                <div class="price_by_night"><h2>$80</h2></div>
+                <div class="information">
+                    <div class="max_guest">
+                        <p>2 Guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <p>1 Bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <p>1 Bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner:</b> Chigodi Antony</p>
+                </div>
+                <div class="description">
+                    <p>
+                        This is a lovely 1 bedroom and 1 bathroom apartment
+                        that can accomaodate 2 people. It locates at the center of Shaghai
+                        and next to subway line 1. 1 stop to Poople Square, 2 stops to
+                        Bund, 3 stops to Jingan Temple.
+                    </p>
+                </div>
+            </article>
+            <article>
+                <h2>Tiny house</h2>
+                <div class="price_by_night"><h2>$65</h2></div>
+                <div class="information">
+                    <div class="max_guest">
+                        <p>2 Guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <p>2 Bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <p>1 Bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner:</b> Dani Mwavadu</p>
+                </div>
+                <div class="description">
+                    <p>
+                        Our place is a private, affordable stand-alone guest
+                        house centrally located just minutes to French Quarters, downtown,
+                        the Fair Grounds (Jazz Fest) and City Park. The guest house is a quaint,
+                        400 square ft. witha full bath, mini kitchen, & living room.
+                        The extra high ceilings make the home feel more spacious.
+                        the sofa converts to a bed also. We have a hand made 
+                        counter ares taht adds character to the room and a great porch
+                        deck to relax on and have a glass of Merlot
+                    </p>
+                </div>
+            </article>
+            <article>
+                <h2>A Suite</h2>
+                <div class="price_by_night"><h2>$190</h2></div>
+                <div class="information">
+                    <div class="max_guest">
+                        <p>6 Guests</p>
+                    </div>
+                    <div class="number_rooms">
+                        <p>3 Bedroom</p>
+                    </div>
+                    <div class="number_bathrooms">
+                        <p>2 Bathroom</p>
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner:</b> Nyamisa    Ongeri</p>
+                </div>
+                <div class="description">
+                    <p>
+                        Newly renovated spacious 2 bedrooms 2 baths in cozy
+                        Gastown style unit with the views of North Shore mountains.
+                        Woodwrad's landmark building at the historic heart Vancouver.
+                        Discover a luxurious urban retreat in the heart of the city.
+                    </p>
+                </div>
+            </article>
+        </section> 
+    </div>
+    <footer>
+        <p>Best School</p>
+    </footer>
+</body>
 </html>
