--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <title>AirBnB Clone</title>
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/2-common.css">
     <link rel="stylesheet" href="styles/2-header.css">
     <link rel="stylesheet" href="styles/2-footer.css">
-    <title>Document</title>
-</head>
-<body>
+  </head>
+
+  <body>
     <header></header>
     <footer>
-        <p>Best School</p>
+      Holberton School
     </footer>
-</body>
+  </body>
 </html>
