--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <title>AirBnB clone</title>
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/4-filters.css">
-    <title>Document</title>
-    <link rel="icon" href="images/icon.png" type="image/png">
-</head>
-<body>
+    <link rel="icon" href="images/icon.png">
+  </head>
+
+  <body>
     <header></header>
     <div class="container">
-        <section class="filters">
-            <button>Search</button>
-        </section>
+      <section class="filters">
+        <button>Search</button>
+      </section>
     </div>
     <footer>
-        <p>Best School</p>
+      Holberton School
     </footer>
-</body>
+  </body>
 </html>
