--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -20,7 +20,7 @@
           <h4>ie. Arizona/Califonia...</h4>
         </div><div class="amenities">
           <h3>Amenities</h3>
-          <h4>ie. Laundry/Internet...</h4>
+          <h4>ie. Internet/Kitchen...</h4>
         </div>
         <button>Search</button>
       </section>
