--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -27,14 +27,14 @@
             </ul>
             <h2>Califonia:</h2>
             <ul>
-              <li>Charlottesville</li>
-              <li>Richmond</li>
+              <li>San Francisco</li>
+              <li>Los Atos</li>
             </ul>
           </div>
 
         </div><div class="amenities">
           <h3>Amenities</h3>
-          <h4>ie. Laundry/Internet...</h4>
+          <h4>ie. Internet, Kitchen...</h4>
           <ul class="popover">
             <li>Internet</li>
             <li>TV</li>
