--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -17,10 +17,10 @@
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>ie. Arizona/Califonia...</h4>
+          <h4>ie. Califonia, Arizona...</h4>
         </div><div class="amenities">
           <h3>Amenities</h3>
-          <h4>ie. Internet/Kitchen...</h4>
+          <h4>ie. Internet, Kitchen...</h4>
         </div>
         <button>Search</button>
       </section>
