--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -27,7 +27,7 @@
             </ul>
             <h2>Califonia:</h2>
             <ul>
-              <li>San Francisco</li>
+              <li>Sanfrancisco</li>
               <li>Los Atos</li>
             </ul>
           </div>
