--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -23,23 +23,23 @@
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>ie. New York/Virgina...</h4>
+          <h4>ie. Califonia, Arizona...</h4>
           <div class="popover">
-            <h2>New York:</h2>
+            <h2>Arizona:</h2>
             <ul>
-              <li>Buffalo</li>
-              <li>New York City</li>
+              <li>Page</li>
+              <li>Page2</li>
             </ul>
-            <h2>Virginia:</h2>
+            <h2>Califonia:</h2>
             <ul>
-              <li>Charlottesville</li>
-              <li>Richmond</li>
+              <li>sanfrancisco</li>
+              <li>Los Atos</li>
             </ul>
           </div>
 
         </div><div class="amenities">
           <h3>Amenities</h3>
-          <h4>ie. Laundry/Internet...</h4>
+          <h4>ie. Internet, Kitchen...</h4>
           <ul class="popover">
             <li>Internet</li>
             <li>TV</li>
