--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -25,17 +25,17 @@
         <section class="filters" role="search">
           <div class="locations">
             <h3>States</h3>
-            <h4>ie. New York/Virgina...</h4>
+            <h4>ie. Califonia, Arizona...</h4>
             <div class="popover">
-              <h2>New York:</h2>
+              <h2>Arizona:</h2>
               <ul>
-                <li>Buffalo</li>
-                <li>New York City</li>
+                <li>Page</li>
+                <li>Page2</li>
               </ul>
-              <h2>Virginia:</h2>
+              <h2>Califonia:</h2>
               <ul>
-                <li>Charlottesville</li>
-                <li>Richmond</li>
+                <li>Sanfrancisco</li>
+                <li>Los Atos</li>
               </ul>
             </div>
 
