--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -25,7 +25,7 @@
         <section class="filters" role="search">
           <div class="locations">
             <h3>States</h3>
-            <h4>ie. Califonia, Arizona...</h4>
+            <h4>Califonia, Arizona...</h4>
             <div class="popover">
               <h2>Arizona:</h2>
               <ul>
@@ -41,7 +41,7 @@
 
             </div><div class="amenities">
               <h3>Amenities</h3>
-              <h4>ie. Laundry/Internet...</h4>
+              <h4>Internet, Kitchen...</h4>
               <ul class="popover">
                 <li>Internet</li>
                 <li>TV</li>
