--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -23,7 +23,7 @@
       <section class="filters">
         <div class="locations">
           <h3>States</h3>
-          <h4>ie. Califonina, Arizona...</h4>
+          <h4>Califonina, Arizona...</h4>
           <div class="popover">
             <h2>Arizona:</h2>
             <ul>
@@ -39,7 +39,7 @@
 
         </div><div class="amenities">
           <h3>Amenities</h3>
-          <h4>ie. Internet, Kitchen...</h4>
+          <h4>Internet, Kitchen...</h4>
           <ul class="popover">
             <li>Internet</li>
             <li>TV</li>
